--- a/CHIcrime.ipynb
+++ b/CHIcrime.ipynb
@@ -1,16 +1,415 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# CHI crime\n",
+    "\n",
+    "\n",
+    "\n",
+    "Data source:\n",
+    "City of Chicago. (2025). *Violence Reduction - Victims of Homicides and Non-Fatal Shootings* (Updated on February 24, 2025) [Data set]. https://data.cityofchicago.org/Public-Safety/Violence-Reduction-Victims-of-Homicides-and-Non-Fa/gumc-mgzr/about_data "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Matplotlib is building the font cache; this may take a moment.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/tn/lrj782gn5yd6plp647hjxv7c0000gq/T/ipykernel_30230/3898857932.py:1: DtypeWarning: Columns (25,26,27) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(\"Violence_Reduction_-_Victims_of_Homicides_and_Non-Fatal_Shootings.csv\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"Violence_Reduction_-_Victims_of_Homicides_and_Non-Fatal_Shootings.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 61140 entries, 0 to 61139\n",
+      "Data columns (total 38 columns):\n",
+      " #   Column                        Non-Null Count  Dtype  \n",
+      "---  ------                        --------------  -----  \n",
+      " 0   CASE_NUMBER                   61140 non-null  object \n",
+      " 1   DATE                          61140 non-null  object \n",
+      " 2   BLOCK                         61140 non-null  object \n",
+      " 3   VICTIMIZATION_PRIMARY         61140 non-null  object \n",
+      " 4   INCIDENT_PRIMARY              61140 non-null  object \n",
+      " 5   GUNSHOT_INJURY_I              61140 non-null  object \n",
+      " 6   UNIQUE_ID                     61140 non-null  object \n",
+      " 7   ZIP_CODE                      61136 non-null  float64\n",
+      " 8   WARD                          61136 non-null  float64\n",
+      " 9   COMMUNITY_AREA                61136 non-null  object \n",
+      " 10  STREET_OUTREACH_ORGANIZATION  44630 non-null  object \n",
+      " 11  AREA                          61136 non-null  float64\n",
+      " 12  DISTRICT                      61136 non-null  float64\n",
+      " 13  BEAT                          61136 non-null  float64\n",
+      " 14  AGE                           61140 non-null  object \n",
+      " 15  SEX                           61140 non-null  object \n",
+      " 16  RACE                          61140 non-null  object \n",
+      " 17  VICTIMIZATION_FBI_CD          60808 non-null  object \n",
+      " 18  INCIDENT_FBI_CD               61135 non-null  object \n",
+      " 19  VICTIMIZATION_FBI_DESCR       60805 non-null  object \n",
+      " 20  INCIDENT_FBI_DESCR            61135 non-null  object \n",
+      " 21  VICTIMIZATION_IUCR_CD         61140 non-null  object \n",
+      " 22  INCIDENT_IUCR_CD              61140 non-null  object \n",
+      " 23  VICTIMIZATION_IUCR_SECONDARY  52709 non-null  object \n",
+      " 24  INCIDENT_IUCR_SECONDARY       53026 non-null  object \n",
+      " 25  HOMICIDE_VICTIM_FIRST_NAME    21561 non-null  object \n",
+      " 26  HOMICIDE_VICTIM_MI            7838 non-null   object \n",
+      " 27  HOMICIDE_VICTIM_LAST_NAME     21545 non-null  object \n",
+      " 28  MONTH                         61140 non-null  int64  \n",
+      " 29  DAY_OF_WEEK                   61140 non-null  int64  \n",
+      " 30  HOUR                          61140 non-null  int64  \n",
+      " 31  LOCATION_DESCRIPTION          61140 non-null  object \n",
+      " 32  STATE_HOUSE_DISTRICT          61134 non-null  float64\n",
+      " 33  STATE_SENATE_DISTRICT         61134 non-null  float64\n",
+      " 34  UPDATED                       61139 non-null  object \n",
+      " 35  LATITUDE                      61136 non-null  float64\n",
+      " 36  LONGITUDE                     61136 non-null  float64\n",
+      " 37  LOCATION                      61136 non-null  object \n",
+      "dtypes: float64(9), int64(3), object(26)\n",
+      "memory usage: 17.7+ MB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CASE_NUMBER</th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>BLOCK</th>\n",
+       "      <th>VICTIMIZATION_PRIMARY</th>\n",
+       "      <th>INCIDENT_PRIMARY</th>\n",
+       "      <th>GUNSHOT_INJURY_I</th>\n",
+       "      <th>UNIQUE_ID</th>\n",
+       "      <th>ZIP_CODE</th>\n",
+       "      <th>WARD</th>\n",
+       "      <th>COMMUNITY_AREA</th>\n",
+       "      <th>...</th>\n",
+       "      <th>MONTH</th>\n",
+       "      <th>DAY_OF_WEEK</th>\n",
+       "      <th>HOUR</th>\n",
+       "      <th>LOCATION_DESCRIPTION</th>\n",
+       "      <th>STATE_HOUSE_DISTRICT</th>\n",
+       "      <th>STATE_SENATE_DISTRICT</th>\n",
+       "      <th>UPDATED</th>\n",
+       "      <th>LATITUDE</th>\n",
+       "      <th>LONGITUDE</th>\n",
+       "      <th>LOCATION</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>JF167335</td>\n",
+       "      <td>03/08/2022 03:27:00 PM</td>\n",
+       "      <td>6000 N KENMORE AVE</td>\n",
+       "      <td>HOMICIDE</td>\n",
+       "      <td>HOMICIDE</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>HOM-JF167335-#1</td>\n",
+       "      <td>60660.0</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>EDGEWATER</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>15</td>\n",
+       "      <td>APARTMENT</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>02/24/2023 05:55:43 AM</td>\n",
+       "      <td>41.990570</td>\n",
+       "      <td>-87.657000</td>\n",
+       "      <td>POINT (-87.657 41.9905705)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>JG148375</td>\n",
+       "      <td>02/11/2023 02:30:00 AM</td>\n",
+       "      <td>8400 S WABASH AVE</td>\n",
+       "      <td>HOMICIDE</td>\n",
+       "      <td>HOMICIDE</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>HOM-JG148375-#1</td>\n",
+       "      <td>60619.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>CHATHAM</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ALLEY</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>02/12/2023 05:09:11 AM</td>\n",
+       "      <td>41.739900</td>\n",
+       "      <td>-87.622860</td>\n",
+       "      <td>POINT (-87.62286 41.7399005)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>JD438266</td>\n",
+       "      <td>11/21/2020 10:15:00 PM</td>\n",
+       "      <td>7900 S BRANDON AVE</td>\n",
+       "      <td>HOMICIDE</td>\n",
+       "      <td>HOMICIDE</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>HOM-JD438266-#1</td>\n",
+       "      <td>60617.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>SOUTH CHICAGO</td>\n",
+       "      <td>...</td>\n",
+       "      <td>11</td>\n",
+       "      <td>7</td>\n",
+       "      <td>22</td>\n",
+       "      <td>STREET</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>01/30/2025 05:49:40 AM</td>\n",
+       "      <td>41.750567</td>\n",
+       "      <td>-87.547249</td>\n",
+       "      <td>POINT (-87.547249058699 41.750566904142)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>JH317789</td>\n",
+       "      <td>06/23/2024 08:11:00 AM</td>\n",
+       "      <td>12300 S HALSTED ST</td>\n",
+       "      <td>HOMICIDE</td>\n",
+       "      <td>HOMICIDE</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>HOM-JH317789-#1</td>\n",
+       "      <td>60628.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>WEST PULLMAN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>STREET</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>01/30/2025 05:40:06 AM</td>\n",
+       "      <td>41.670653</td>\n",
+       "      <td>-87.641779</td>\n",
+       "      <td>POINT (-87.641779058699 41.670653095858)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>JH317789</td>\n",
+       "      <td>06/23/2024 08:11:00 AM</td>\n",
+       "      <td>12300 S HALSTED ST</td>\n",
+       "      <td>HOMICIDE</td>\n",
+       "      <td>HOMICIDE</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>HOM-JH317789-#2</td>\n",
+       "      <td>60628.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>WEST PULLMAN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>STREET</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>01/30/2025 05:40:14 AM</td>\n",
+       "      <td>41.670653</td>\n",
+       "      <td>-87.641779</td>\n",
+       "      <td>POINT (-87.641779058699 41.670653095858)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 38 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  CASE_NUMBER                    DATE               BLOCK  \\\n",
+       "0    JF167335  03/08/2022 03:27:00 PM  6000 N KENMORE AVE   \n",
+       "1    JG148375  02/11/2023 02:30:00 AM   8400 S WABASH AVE   \n",
+       "2    JD438266  11/21/2020 10:15:00 PM  7900 S BRANDON AVE   \n",
+       "3    JH317789  06/23/2024 08:11:00 AM  12300 S HALSTED ST   \n",
+       "4    JH317789  06/23/2024 08:11:00 AM  12300 S HALSTED ST   \n",
+       "\n",
+       "  VICTIMIZATION_PRIMARY INCIDENT_PRIMARY GUNSHOT_INJURY_I        UNIQUE_ID  \\\n",
+       "0              HOMICIDE         HOMICIDE               NO  HOM-JF167335-#1   \n",
+       "1              HOMICIDE         HOMICIDE              YES  HOM-JG148375-#1   \n",
+       "2              HOMICIDE         HOMICIDE              YES  HOM-JD438266-#1   \n",
+       "3              HOMICIDE         HOMICIDE              YES  HOM-JH317789-#1   \n",
+       "4              HOMICIDE         HOMICIDE              YES  HOM-JH317789-#2   \n",
+       "\n",
+       "   ZIP_CODE  WARD COMMUNITY_AREA  ... MONTH  DAY_OF_WEEK  HOUR  \\\n",
+       "0   60660.0  48.0      EDGEWATER  ...     3            3    15   \n",
+       "1   60619.0   6.0        CHATHAM  ...     2            7     2   \n",
+       "2   60617.0   7.0  SOUTH CHICAGO  ...    11            7    22   \n",
+       "3   60628.0   9.0   WEST PULLMAN  ...     6            1     8   \n",
+       "4   60628.0   9.0   WEST PULLMAN  ...     6            1     8   \n",
+       "\n",
+       "   LOCATION_DESCRIPTION STATE_HOUSE_DISTRICT STATE_SENATE_DISTRICT  \\\n",
+       "0             APARTMENT                 14.0                   7.0   \n",
+       "1                 ALLEY                 34.0                  17.0   \n",
+       "2                STREET                 25.0                  13.0   \n",
+       "3                STREET                 28.0                  14.0   \n",
+       "4                STREET                 28.0                  14.0   \n",
+       "\n",
+       "                  UPDATED   LATITUDE  LONGITUDE  \\\n",
+       "0  02/24/2023 05:55:43 AM  41.990570 -87.657000   \n",
+       "1  02/12/2023 05:09:11 AM  41.739900 -87.622860   \n",
+       "2  01/30/2025 05:49:40 AM  41.750567 -87.547249   \n",
+       "3  01/30/2025 05:40:06 AM  41.670653 -87.641779   \n",
+       "4  01/30/2025 05:40:14 AM  41.670653 -87.641779   \n",
+       "\n",
+       "                                   LOCATION  \n",
+       "0                POINT (-87.657 41.9905705)  \n",
+       "1              POINT (-87.62286 41.7399005)  \n",
+       "2  POINT (-87.547249058699 41.750566904142)  \n",
+       "3  POINT (-87.641779058699 41.670653095858)  \n",
+       "4  POINT (-87.641779058699 41.670653095858)  \n",
+       "\n",
+       "[5 rows x 38 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.info()\n",
+    "\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CASE_NUMBER                         0\n",
+       "DATE                                0\n",
+       "BLOCK                               0\n",
+       "VICTIMIZATION_PRIMARY               0\n",
+       "INCIDENT_PRIMARY                    0\n",
+       "GUNSHOT_INJURY_I                    0\n",
+       "UNIQUE_ID                           0\n",
+       "ZIP_CODE                            4\n",
+       "WARD                                4\n",
+       "COMMUNITY_AREA                      4\n",
+       "STREET_OUTREACH_ORGANIZATION    16510\n",
+       "AREA                                4\n",
+       "DISTRICT                            4\n",
+       "BEAT                                4\n",
+       "AGE                                 0\n",
+       "SEX                                 0\n",
+       "RACE                                0\n",
+       "VICTIMIZATION_FBI_CD              332\n",
+       "INCIDENT_FBI_CD                     5\n",
+       "VICTIMIZATION_FBI_DESCR           335\n",
+       "INCIDENT_FBI_DESCR                  5\n",
+       "VICTIMIZATION_IUCR_CD               0\n",
+       "INCIDENT_IUCR_CD                    0\n",
+       "VICTIMIZATION_IUCR_SECONDARY     8431\n",
+       "INCIDENT_IUCR_SECONDARY          8114\n",
+       "HOMICIDE_VICTIM_FIRST_NAME      39579\n",
+       "HOMICIDE_VICTIM_MI              53302\n",
+       "HOMICIDE_VICTIM_LAST_NAME       39595\n",
+       "MONTH                               0\n",
+       "DAY_OF_WEEK                         0\n",
+       "HOUR                                0\n",
+       "LOCATION_DESCRIPTION                0\n",
+       "STATE_HOUSE_DISTRICT                6\n",
+       "STATE_SENATE_DISTRICT               6\n",
+       "UPDATED                             1\n",
+       "LATITUDE                            4\n",
+       "LONGITUDE                           4\n",
+       "LOCATION                            4\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "3.13.0",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
