add to notebook

--- a/CHIcrime.ipynb
+++ b/CHIcrime.ipynb
@@ -4,9 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CHI crime\n",
+    "# CHI crime: An Analysis of Homicides and Non-Fatal Shootings in Chicago\n",
     "\n",
+    "Much has been written about the frequency of shootings and homicides in Chicago. Most of the analyses and attempted interventions have focused on reducing the overall prevalence of guns and the raw number of shootings — with only modest success. The question I will address instead is, what can we learn by analyzing the nature of the shootings that have occurred over the past few decades? Can we build a good predictive model that will tell us **who** is likely to be killed in a shooting, and **where**? If so, then maybe we could imagine interventions that specifically address the lethality of shootings, as opposed to their prevalence.\n",
     "\n",
+    "My project aims to use a Decision Tree Classifier to create a model that predicts whether or not someone victimized in a shooting will be killed.\n",
+    "\n",
+    "To train and test my model, I will use a dataset containing fatal and non-fatal shooting victimizations in the City of Chicago from 1991 to the present day (March, 2025).\n",
     "\n",
     "Data source:\n",
     "City of Chicago. (2025). *Violence Reduction - Victims of Homicides and Non-Fatal Shootings* (Updated on February 24, 2025) [Data set]. https://data.cityofchicago.org/Public-Safety/Violence-Reduction-Victims-of-Homicides-and-Non-Fa/gumc-mgzr/about_data "
@@ -14,17 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib is building the font cache; this may take a moment.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import seaborn as sns\n",
@@ -35,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -52,8 +48,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First I'm going to take a high-level look at  the data:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +109,17 @@
       "dtypes: float64(9), int64(3), object(26)\n",
       "memory usage: 17.7+ MB\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -323,20 +336,33 @@
        "[5 rows x 38 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.info()\n",
-    "\n",
     "df.head()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The data is 61,140 rows with 38 columns, in a file that's 17.7 MB.\n",
+    "\n",
+    "Several aspects of the data suggest cleaning and prepping work ahead:\n",
+    "\n",
+    "1. Most significantly, there's no clear target column. Fatal shootings are indicated by a value in the VICTIMIZATION_PRIMARY colunn of \"HOMICIDE\" alongside a GUNSHOT_INJURY_I value of \"YES.\" Non-fatal shootings are indicated by any other values in VICTIMIZATION_PRIMARY. I will want look at just the shooting incidents and give a binary answer to \"was this a homicide?\" in a new column. Then I can delete all the redundant and extraneous crime classification columns. \n",
+    "\n",
+    "2. The fact that so many columns are of type \"object\" is going to be problematic. Some of these should be oridinal categoricals (such as \"age\"), while others such as \"sex\" are non-ordinal. I need to change the dtypes to make the data more useful for analysis.\n",
+    "\n",
+    "3. I  got a warning when importing the data that columns 25-27 have mixed data. Since those columns contain the victims' name, I think I can safely delete them. Furthermore, there are is lof of redundant location information in columns that I can probably ignore."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -383,13 +409,47 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Checking for null entries confirms my original "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define Figure Size\n",
+    "# plt.figure(figsize=(12, 6))\n",
+    "\n",
+    "# # 1. Age Distribution\n",
+    "# sns.histplot(df['AGE'], bins=20, kde=False)\n",
+    "# plt.title(\"Age Distribution\")\n",
+    "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plt.figure(figsize=(12, 8))\n",
+    "# sns.heatmap(df.corr(), annot=True, cmap=\"coolwarm\", fmt=\".2f\")\n",
+    "# plt.title(\"Correlation Heatmap\")\n",
+    "# plt.show()"
    ]
   }
  ],
