tried three models

--- a/CHIcrime.ipynb
+++ b/CHIcrime.ipynb
@@ -1165,15 +1165,80 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "That accuracy is not significantly different from what I got with KNN.\n",
+    "\n",
+    "I started out with a large number of AdaBoost estimators, but I want to see if I can improve the accuracy by tuning the number."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 467,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.8316946211683054\n"
+      "Best score: 0.8320175245180097\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "ada_clf = AdaBoostClassifier()\n",
+    "\n",
+    "param_grid = {'n_estimators': [50, 100, 150, 200, 250, 300]}\n",
+    "\n",
+    "grid_search = GridSearchCV(ada_clf, param_grid, cv=5, scoring='accuracy')\n",
+    "\n",
+    "grid_search.fit(X_array, y_array)\n",
+    "\n",
+    "best_n_estimators = grid_search.best_params_['n_estimators'] \n",
+    "\n",
+    "print(\"Best score:\", grid_search.best_score_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 472,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best # estimators: 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Best # estimators:\", best_n_estimators)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So with 50 AdaBoost estimators, I do not much better.\n",
+    "\n",
+    "Now I'll try SVM — though I know it's not great for large datasets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 473,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.8255494505494505\n"
      ]
     }
    ],
@@ -1190,6 +1255,17 @@
     "\n",
     "accuracy_svm = accuracy_score(y_test, y_pred_svm)\n",
     "print(f\"Accuracy: {accuracy_svm}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "My accuracy with SVM was slightly worse than with the other two models, and it took longer. In fact, when I tried to do an automated tuning for C and gamma, the process was taking so long that I just killed it. SVM gets ruled out as an efficient model.\n",
+    "\n",
+    "Given that all three classifier models seem to max out around 0.83 accuracy, my preference is for the KNN model, which performed fastest.\n",
+    "\n",
+    "This is unsurprising, given that AdaBoost and especially SVM are poor with large datasets. "
    ]
   }
  ],
