--- a/CHIcrime.ipynb
+++ b/CHIcrime.ipynb
@@ -6,13 +6,27 @@
    "source": [
     "# CHI crime: An Analysis of Homicides and Non-Fatal Shootings in Chicago\n",
     "\n",
+    "### PROJECT TOPIC \n",
+    "\n",
     "Much has been written about the frequency of shootings and homicides in Chicago. Most of the analyses and attempted interventions have focused on reducing the overall prevalence of guns and the raw number of shootings — with only modest success. The question I will address instead is, what can we learn by analyzing the nature of the shootings that have occurred over the past few decades? Can we build a good predictive model that will tell us **who** is likely to be killed in a shooting, **where** and **when**? If so, then maybe we could imagine interventions that specifically address the lethality of shootings, as opposed to their prevalence.\n",
     "\n",
-    "My project aims to create a classifier model that predicts whether or not someone victimized in a shooting will be killed.\n",
+    "My project aims to create a classifier model that predicts whether or not someone victimized in a shooting will be killed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DATA\n",
     "\n",
     "To train and test my model, I will use a dataset containing fatal and non-fatal shooting victimizations in the City of Chicago from 1991 to the present day (March, 2025).\n",
     "\n",
+    "This dataset contains individual-level homicide and non-fatal shooting victimizations, including homicide data from 1991 to the present, and non-fatal shooting data from 2010 to the present (2010 is the earliest available year for shooting data).\n",
+    "\n",
+    "Each row represents a single victimization, i.e., a unique event when an individual became the victim of a homicide or non-fatal shooting.\n",
+    "\n",
     "Data source:\n",
+    "\n",
     "City of Chicago. (2025). *Violence Reduction - Victims of Homicides and Non-Fatal Shootings* (Updated on February 24, 2025) [Data set]. https://data.cityofchicago.org/Public-Safety/Violence-Reduction-Victims-of-Homicides-and-Non-Fa/gumc-mgzr/about_data "
    ]
   },
@@ -408,7 +422,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The data is 61,140 rows with 38 columns, in a file that's 17.7 MB.\n",
+    "The data is 61,140 rows with 38 columns, in a file that's 17.7 MB."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DATA CLEANING\n",
     "\n",
     "Some aspects of the data suggest necessary cleaning and prepping work ahead:\n",
     "\n",
@@ -692,6 +713,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### EXPLORATORY DATA ANALYSIS\n",
+    "\n",
     "Now that the data is mostly clean (except for the RACE column, which I'll deal with later), I'm going to do some Exploratory Data Analysis through various visualizations, and try to find good features to use for my model."
    ]
   },
@@ -933,6 +956,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### MODELS\n",
+    "\n",
+    "#### KNN\n",
+    "\n",
     "I will start by trying out a K-nearest neighbors model, testing with an arbitary hyperparameter K value of 5 just to look at the confusion matrix and get a ballpark of model accuracy."
    ]
   },
@@ -1132,7 +1159,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that I have a baseline from KNN, I want to also look at the accuracy of classifier models based on AdaBoost and a Support Vector Machine."
+    "Now that I have a baseline accuracy from my KNN model, I want to also look at the accuracy of classifier models based on AdaBoost and a Support Vector Machine."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ADABOOST"
    ]
   },
   {
@@ -1170,7 +1204,7 @@
    "source": [
     "That accuracy is not significantly different from what I got with KNN.\n",
     "\n",
-    "I started out with a large number of AdaBoost estimators, but I want to see if I can improve the accuracy by tuning the number."
+    "I started out with a large number of AdaBoost estimators, but now I want to see if I can improve the accuracy by tuning the number."
    ]
   },
   {
@@ -1230,6 +1264,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### SUPPORT VECTOR MACHINE"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 473,
    "metadata": {},
@@ -1261,11 +1302,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### RESULTS AND ANALYSIS\n",
+    "\n",
     "My accuracy with SVM was slightly worse than with the other two models, and it took longer. In fact, when I tried to do an automated tuning for C and gamma, the process was taking so long that I just killed it. SVM gets ruled out as an efficient model.\n",
     "\n",
     "Given that all three classifier models seem to max out around 0.83 accuracy, my preference is for the KNN model, which performed fastest.\n",
     "\n",
     "This is unsurprising, given that AdaBoost and especially SVM are poor with large datasets. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DISCUSSION AND CONCLUSION\n",
+    "\n",
+    "This"
    ]
   }
  ],
